# ENPM808X_Midterm

./: .project  CMakeCache.txt  LICENSE.txt  Makefile  cmake_install.cmake  compile_commands.json  readme.md
UML/initial/: Activity Diagram.html  Class Diagram.html
UML/revised/: ClassDiagram.xml
app/: Makefile  cmake_install.cmake  main.cpp
docs/ENPM808X_Midterm Folder/html/: dir_9ffb63da5efcb28b446e381eb5b812a7.html  md__home_viki_ENPM808X_Midterm_readme.html  pages.html
docs/ENPM808X_Midterm Folder/latex/: dir_9ffb63da5efcb28b446e381eb5b812a7.tex  md__home_viki_ENPM808X_Midterm_readme.tex  refman.tex
docs/app folder/html/: dir_38295a5b030e8d8bd28d9907aaf3349a.html  dir_9ffb63da5efcb28b446e381eb5b812a7.html  files.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
docs/app folder/latex/: dir_38295a5b030e8d8bd28d9907aaf3349a.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5
docs/include folder/html/: _motion_tracker_8cpp.html  _motion_tracker_8cpp__incl.map  _motion_tracker_8cpp__incl.md5  _motion_tracker_8h.html  _motion_tracker_8h__dep__incl.map  _motion_tracker_8h__dep__incl.md5  _motion_tracker_8h__incl.map  _motion_tracker_8h__incl.md5  _motion_tracker_8h_source.html  annotated.html  class_motion_tracker-members.html  classes.html  (+6 more)
include/: MotionTracker.cpp  MotionTracker.h
opencv32/: opencv32.sln
opencv32/opencv32/: MotionTracker.cpp  MotionTracker.h  main.cpp  opencv32.vcxproj.filters  opencv32.vcxproj.xml  test.cpp  testmain.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
(+29 files in other folders)
